Name:                beatbox
Version:             0.1
Synopsis:            Voice-recognizing beatbox machine
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Noam Lewis
Maintainer:          jones.noamle@gmail.com
-- Copyright:           
Stability:           Experimental
Category:            Sound
Build-type:          Simple

-- Extra-source-files:  
Cabal-version:       >=1.2


Executable beatbox
  -- .hs or .lhs file containing the Main module.
  Main-is: Main.hs
  hs-Source-Dirs: src
  build-depends: base >=4 && <5, hsndfile-vector, hsndfile, vector
  -- storablevector
  ghc-options: -Wall -O2
  -- Other-modules:       
  -- Build-tools:         
  
